# rle-ruritania-tyler

./: .gitignore  _quarto.yml  pyproject.toml
config/: country_config.yaml
config/ecosystems/M1.1.1/: ecosystem.yaml
config/ecosystems/T1.1.1/: ecosystem.yaml
config/ecosystems/T6.5.1/: ecosystem.yaml
content/: 2_ecosystem_overview.qmd
content/3_ecosystem_assessments/M1.1.1/: M1.1.1_crit_b.qmd
content/3_ecosystem_assessments/T1.1.1/: T1.1.1_crit_b.qmd
content/3_ecosystem_assessments/T6.5.1/: T6.5.1_crit_b.qmd
docs/: GCP_SETUP.md
scripts/: build_ecosystem_pages.py  build_ecosystems_config.py  update_ecosystem_asset.py
templates/: crit_b.qmd
